--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "assets": ["./src/assets/*"],
     "components": ["./src/components/*"],
     "containers": ["./src/containers/*"],
+    "pages": ["./src/pages/*"],
     "styles": ["./src/styles/*"],
   }
 }
