Add api, an axios instance

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,6 @@
     "pages": ["./src/pages/*"],
     "routes": ["./src/routes/*"],
     "styles": ["./src/styles/*"],
+    "api": ["./src/api/*"],
   }
 }
