--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "sass": "^1.54.0"
+    "sass": "^1.54.0",
+    "vite-plugin-svgr": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^18.6.1",
