--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "SET NODE_ENV=development node server",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build --outDir build/client",
+    "build:server": "vite build --ssr src/entry-server.tsx --outDir server",
+    "serve": "SET NODE_ENV=production node server"
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "express": "^4.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
