--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": ["src", "server.js"],
   "references": [{ "path": "./tsconfig.node.json" }],
   "paths": {
     "assets": ["./src/assets/*"],
