Add hooks folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,6 @@
     "routes": ["./src/routes/*"],
     "styles": ["./src/styles/*"],
     "api": ["./src/api/*"],
+    "hooks": ["./src/hooks/*"],
   }
 }
