--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,25 @@
   status = 200
 
 [[headers]]
-  for = "/*"
+  for = "/Build/*.data.br"
   [headers.values]
-    accept-encoding = "gzip, deflate, br"
+    Content-Encoding = "br"
+    Content-Type = "application/octet-stream"
+	
+[[headers]]
+  for = "/Build/*.wasm.br"
+  [headers.values]
+    Content-Encoding = "br"
+    Content-Type = "application/wasm"
+
+[[headers]]                                                                      
+  for = "/Build/*.js"                                                             
+  [headers.values]
+    Content-Encoding = "js"
+    Content-Type = "application/javascript"
+	
+[[headers]]                                                                      
+  for = "/Build/*.js.br"                                                             
+  [headers.values]
+    Content-Encoding = "br"
+    Content-Type = "application/javascript"
