--- a/netlify.toml
+++ b/netlify.toml
@@ -1,23 +1,34 @@
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [[headers]]
-  for = "/Build/*.data.br"
+  for = "/build/*.data.br"
   [headers.values]
     Content-Encoding = "br"
     Content-Type = "application/octet-stream"
 	
 [[headers]]
-  for = "/Build/*.wasm.br"
+  for = "/build/*.wasm.br"
   [headers.values]
     Content-Encoding = "br"
     Content-Type = "application/wasm"
 
 [[headers]]                                                                      
-  for = "/Build/*.js"                                                             
+  for = "/build/*.html.br"                                                             
+  [headers.values]
+    Content-Encoding = "br"
+    Content-Type = "text/html"
+
+[[headers]]                                                                      
+  for = "/build/*.js"                                                             
   [headers.values]
     Content-Encoding = "js"
     Content-Type = "application/javascript"
 	
 [[headers]]                                                                      
-  for = "/Build/*.js.br"                                                             
+  for = "/build/*.js.br"                                                             
   [headers.values]
     Content-Encoding = "br"
     Content-Type = "application/javascript"
