--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@types/react-helmet": "^6.1.5",
     "@vitejs/plugin-react": "^2.0.0",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0",
-    "vite-plugin-compression": "^0.5.1"
+    "vite": "^3.0.0"
   }
 }
