--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "sass": "^1.54.0",
     "vite-plugin-svgr": "^2.2.1"
