--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.1.3"
+    "astro": "^1.1.3",
+    "react-svg": "^15.1.7",
+    "sass": "^1.54.8"
+  },
+  "devDependencies": {
+    "@astrojs/react": "^1.1.1",
+    "@types/react": "^18.0.18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
